# holonomic_robot

./: launch_aruco_pose_debug.sh  launch_nav2_odom_only_with_can0.sh  usefull_commands
can_interface/: CMakeLists.txt  README.md  package.xml
can_interface/launch/: can_bridge.launch.py
can_interface/msg/: CanFrame.msg
can_interface/src/: can_node.cpp  can_test_node.cpp
lidar_filter/: package.xml
robot_application/: package.xml  setup.py
robot_application/config/: nav2_params_holonomic.yaml  robot.rviz
robot_application/launch/: full_system.launch.py  rplidar.launch.py
robot_application/robot_application/: fake_odometry.py  waypoint_test.py
scripts/: read_micropython_gpio_change.py
src/aruco_alignment/: CMakeLists.txt  package.xml
src/aruco_alignment/config/: alignment_config.yaml
src/aruco_alignment/launch/: alignment.launch.py
src/aruco_alignment/src/: alignment_node.cpp  pid_controller.hpp
src/aruco_interfaces/: CMakeLists.txt  package.xml
src/aruco_interfaces/action/: AlignToCluster.action
src/aruco_interfaces/msg/: ArmAssignment.msg  ClusterPickability.msg  DetectedTag.msg  DetectedTagArray.msg
src/aruco_interfaces/srv/: AlignToCluster.srv  MoveRelative.srv
src/aruco_localization/: CMakeLists.txt  package.xml
src/aruco_localization/config/: localization_config.yaml
src/aruco_localization/launch/: aruco_localization.launch.py
src/aruco_localization/src/: localization_node.cpp
src/aruco_manager/: CMakeLists.txt  package.xml
src/aruco_manager/config/: aruco_picker.yaml  tag_config.yaml  tag_manager_node.cpp
src/aruco_manager/launch/: aruco_manager.launch.py  aruco_pose_debug.launch.py
src/aruco_manager/scripts/: aruco_pose_debug_node.py
src/aruco_manager/src/: tag_manager_node.cpp
src/can_interface/: CMakeLists.txt  package.xml
src/can_interface/launch/: can_bridge.launch.py
src/can_interface/src/: can_node.cpp  can_test_node.cpp
src/custom_objects_layer/: CMakeLists.txt  package.xml  plugin.xml
src/custom_objects_layer/include/custom_objects_layer/: custom_objects_layer.hpp
src/custom_objects_layer/src/: custom_objects_layer.cpp
src/feetech_node/: package.xml  setup.cfg  setup.py
src/feetech_node/config/: feetech_config.yaml
src/feetech_node/feetech_node/: feetech_node.py
src/feetech_node/launch/: feetech.launch.py
src/gpio_latte/: package.xml  setup.cfg  setup.py
src/gpio_latte/config/: gpio_config.yaml
src/gpio_latte/gpio_latte/: gpio_manager.py
src/gpio_latte/launch/: gpio_manager.launch.py
src/holonomic_robot_bringup/: package.xml  setup.py
src/holonomic_robot_bringup/config/: bt_nav_through_poses_no_fallback.xml  bt_nav_to_pose_no_fallback.xml  custom_objects_init.yaml  nav2_params.yaml  nav2_params_holonomic.yaml  nav2_params_odom_only copy 2.yaml  nav2_params_odom_only copy.yaml  nav2_params_odom_only copy_fast.yaml  nav2_params_odom_only.yaml
src/holonomic_robot_bringup/holonomic_robot_bringup/: custom_objects_initializer.py  odom_to_base_tf_broadcaster.py
src/holonomic_robot_bringup/launch/: aruco_alignment_stack.launch.py  motion_controller_stack.launch.py  nav2_odom_only.launch.py
src/i2c_node/: package.xml  setup.cfg  setup.py
src/i2c_node/config/: i2c_config.yaml
src/i2c_node/i2c_node/: i2c_node.py  mcp23017_driver.py  pca9685_driver.py
src/i2c_node/launch/: i2c.launch.py
src/lidar_filter/: CMakeLists.txt
src/lidar_filter/src/: rplidar_node.cpp  scan_filter.cpp
src/motion_controller/: CMakeLists.txt  package.xml
src/motion_controller/config/: alignment_config.yaml
src/motion_controller/launch/: alignment.launch.py
src/motion_controller/src/: motion_controller_node.cpp  pid_controller.hpp
src/robot_actuators/: CMakeLists.txt  package.xml
src/robot_actuators/action/: ControlGripper.action  ControlPump.action  ExecuteSequence.action  MoveServo.action
src/robot_actuators/config/: sequencer_config.yaml
src/robot_actuators/launch/: sequencer.launch.py
src/robot_actuators/msg/: ActuatorStep.msg
src/robot_actuators/runtime_actuators/: __init__.py  actuator_sequencer.py
src/robot_actuators/scripts/: actuator_sequencer.py
src/robot_application/: CMakeLists.txt  full_system.launch.py  package.xml  setup.cfg  setup.py
src/robot_application/behavior_trees/: nut_pickup.xml
src/robot_application/config/: game_state.yaml  mission_controller.yaml  nav2_params_holonomic.yaml  nut_pickup_config.yaml  pick_drop_locations.yaml  task_planner.yaml
src/robot_application/launch/: full_system.launch.py  map_server_launch.py  nut_pickup_mission.launch.py  strategic_planner.launch.py  ui_nodes.launch.py
src/robot_application/robot_application/: arm_layout.py  arm_sequences.py  custom_object_delete_test.py  drop_target_manager.py  game_state_manager.py  mission_base.py  mission_executor.py  nut_pickup_mission.py  odom_theta_monitor.py  pick_place_outcome_processor.py  pick_place_payload_builder.py  season_task_composers.py  task_adapters.py  task_definitions.py  task_planner.py  world_state_manager.py
src/robot_application/robot_application/handlers/: __init__.py  alignment_config.yaml  goto_pose_handler.py  pick_place_handler.py  return_base_handler.py
src/robot_application/scripts/: custom_object_delete_test  mission_executor.py  odom_theta_monitor.py  pick_place_mission.py  run_arm_sequence.py  safety_arm_reset.py
src/robot_application/test/: conftest.py  test_pick_place_outcomes.py  test_season_task_composer.py  test_task_planner_mission_wait.py
src/robot_gui/: package.xml  setup.cfg  setup.py
src/robot_gui/config/: gui_config.yaml
src/robot_gui/launch/: robot_gui.launch.py
src/robot_gui/robot_gui/: __init__.py  gui_node.py  main_window.py  ros_interface.py
src/robot_hw_interfaces/: CMakeLists.txt  README.md  package.xml
src/robot_hw_interfaces/msg/: PumpCommand.msg  PumpState.msg  PwmServoCommand.msg  SafetyState.msg  ServoCommand.msg  ServoState.msg
src/safety_node/: package.xml  setup.py
src/safety_node/config/: safety_config.yaml
src/safety_node/launch/: safety.launch.py
src/safety_node/safety_node/: safety_node.py
(+9 files in other folders)
