<?xml version="1.0"?>
<package format="3">
  <name>lidar_filter</name>
  <version>0.0.0</version>
  <description>Lightweight scan filter limiting lidar returns to a rectangular field</description>
  <maintainer email="user@example.com">Max</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
