<?xml version="1.0"?>
<package format="3">
  <name>custom_objects_layer</name>
  <version>0.0.1</version>
  <description>Custom Nav2 costmap layer for runtime removable objects.</description>

  <maintainer email="ovoleur@localhost">ovoleur</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
