<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_node</name>
  <version>0.0.0</version>
  <description>I2C actuator node — PCA9685 PWM driver for servos and pumps on RPi4.</description>
  <maintainer email="maxmorlion2024@gmail.com">ovoleur</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_hw_interfaces</exec_depend>
  <exec_depend>robot_actuators</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
